[gd_scene load_steps=33 format=2]

[ext_resource path="res://scripts/Toddler.gd" type="Script" id=1]
[ext_resource path="res://assets/bubbles/cookie_bubble.png" type="Texture" id=2]
[ext_resource path="res://assets/spritesheets/toddler_01.png" type="Texture" id=3]
[ext_resource path="res://assets/bubbles/scissor_bubble.png" type="Texture" id=4]
[ext_resource path="res://assets/bubbles/fork_bubble.png" type="Texture" id=5]
[ext_resource path="res://assets/bubbles/poop_bubble.png" type="Texture" id=6]
[ext_resource path="res://scripts/ToddlerTimers.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 20, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 40, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 60, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 100, 20, 20 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 20, 20, 20 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 20, 20, 20, 20 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 40, 20, 20, 20 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 60, 20, 20, 20 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 0, 80, 20, 20 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 20, 80, 20, 20 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 40, 80, 20, 20 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 60, 80, 20, 20 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 0, 40, 20, 20 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 20, 40, 20, 20 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 40, 40, 20, 20 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 60, 40, 20, 20 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 0, 60, 20, 20 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 20, 60, 20, 20 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 40, 60, 20, 20 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 60, 60, 20, 20 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ) ],
"loop": true,
"name": "picked_up",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 18 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 10 )

[node name="Toddler" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, -11 )
scale = Vector2( 2, 2 )
frames = SubResource( 24 )
animation = "picked_up"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -11 )
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 1 )

[node name="ToddlerTimers" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="RotationTimer" type="Timer" parent="ToddlerTimers"]
one_shot = true

[node name="WalkingTimer" type="Timer" parent="ToddlerTimers"]
one_shot = true

[node name="WaitTimer" type="Timer" parent="ToddlerTimers"]
one_shot = true

[node name="SuicidalThoughtsTimer" type="Timer" parent="ToddlerTimers"]
one_shot = true

[node name="HungerTimer" type="Timer" parent="ToddlerTimers"]
one_shot = true

[node name="StarvationTimer" type="Timer" parent="ToddlerTimers"]
one_shot = true

[node name="PoopTimer" type="Timer" parent="ToddlerTimers"]
one_shot = true

[node name="DysentryTimer" type="Timer" parent="ToddlerTimers"]
one_shot = true

[node name="ScissorTimer" type="Timer" parent="ToddlerTimers"]
one_shot = true

[node name="SpeechBubbles" type="Node2D" parent="."]

[node name="HungerBubble" type="Sprite" parent="SpeechBubbles"]
visible = false
position = Vector2( 29, -43 )
scale = Vector2( 2, 2 )
z_index = 1
texture = ExtResource( 2 )

[node name="ForkBubble" type="Sprite" parent="SpeechBubbles"]
visible = false
position = Vector2( 29, -43 )
scale = Vector2( 2, 2 )
z_index = 1
texture = ExtResource( 5 )

[node name="PoopBubble" type="Sprite" parent="SpeechBubbles"]
visible = false
position = Vector2( 29, -43 )
scale = Vector2( 2, 2 )
z_index = 1
texture = ExtResource( 6 )

[node name="ScissorBubble" type="Sprite" parent="SpeechBubbles"]
visible = false
position = Vector2( 29, -43 )
scale = Vector2( 2, 2 )
z_index = 1
texture = ExtResource( 4 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="ToddlerTimers" to="." method="_on_ToddlerTimers_timeout"]
[connection signal="timeout" from="ToddlerTimers/RotationTimer" to="ToddlerTimers" method="_on_RotationTimer_timeout"]
[connection signal="timeout" from="ToddlerTimers/WalkingTimer" to="ToddlerTimers" method="_on_WalkingTimer_timeout"]
[connection signal="timeout" from="ToddlerTimers/WaitTimer" to="ToddlerTimers" method="_on_WaitTimer_timeout"]
[connection signal="timeout" from="ToddlerTimers/SuicidalThoughtsTimer" to="ToddlerTimers" method="_on_SuicidalThoughtsTimer_timeout"]
[connection signal="timeout" from="ToddlerTimers/HungerTimer" to="ToddlerTimers" method="_on_HungerTimer_timeout"]
[connection signal="timeout" from="ToddlerTimers/StarvationTimer" to="ToddlerTimers" method="_on_StarvationTimer_timeout"]
[connection signal="timeout" from="ToddlerTimers/PoopTimer" to="ToddlerTimers" method="_on_PoopTimer_timeout"]
[connection signal="timeout" from="ToddlerTimers/DysentryTimer" to="ToddlerTimers" method="_on_DysentryTimer_timeout"]
[connection signal="timeout" from="ToddlerTimers/ScissorTimer" to="ToddlerTimers" method="_on_ScissorTimer_timeout"]
